# DentalaxFinal

./: .replit  app.py  claims.csv  config.py  db_praxis_route.py  image_utils.py  leistungen_config.py  main.py  migrations.py  models.py  neue_praxen.csv  package-lock.json  package.json  paket_auswahl_log.csv  paket_buchungen.csv  paket_buchungen.csv.bak  paket_buchungen.csv.new  patienten.csv  pyproject.toml  render.yaml  replit.md  replit.nix  requirements.txt  stripe_integration.py  stripe_subscription.py  zahnaerzte.csv
attached_assets/: Pasted--Cloning-from-https-github-com-aglenedwards-DentalaxFin_1771030471728.txt  Pasted--Maps-Embed-API-Google-Enterprise-API-Place-an-interact_1770981153536.txt  Pasted--Praxis-Routen-erfolgreich-geladen-Geocodierte-Koordina_1777284716001.txt  Pasted--SQL-SELECT-zahnarzt-id-AS-zahnarzt-id-zahnarzt-email-A_1771084133800.txt  Pasted-10-19-73-132-28-Apr-2026-11-28-00-0000-GET-praxis-ueber_1777376173137.txt  Pasted-172-69-151-235-28-Apr-2026-11-58-59-0000-GET-praxis-ueb_1777377705620.txt  Pasted-172-70-242-249-28-Apr-2026-14-17-27-0000-GET-praxis-ueb_1777385978262.txt  Pasted-Derzeit-ist-das-Dashboard-noch-so-ein-bisschen-komplizi_1768239131926.txt  Pasted-Downloading-Brotli-1-1-0-cp311-cp311-manylinux-2-17-x86_1771031302421.txt  Pasted-So-wir-m-ssen-nun-mal-die-generierte-Landingpage-ein-bi_1769036605901.txt  Pasted-Wenn-ich-z-B-eine-Stadtsuche-eingebe-z-B-Bodenheim-und-_1766960401010.txt  Pasted-Wir-m-ssen-mal-kurz-ber-die-Landingpage-sprechen-und-be_1771080382419.txt  dentalax.de-Coverage-Drilldown-2026-04-28_(1)_1777387781449.xlsx  (+1 more)
(+81 files in other folders)
