[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "requests>=2.31.0",
    "stripe>=12.0.0",
    "weasyprint>=65.0",
    "sqlalchemy>=2.0.39",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "pytz>=2025.2",
    "openai>=2.15.0",
    "python-dateutil>=2.9.0.post0",
]
